        - reorganized all test files so that when unit testing with
          Test::BrewBuild, the LCD will retain the test results for the majority
          of the test run
        - added new testing env var "RPI_RELEASE_TESTING", so that we can
          install other CPAN distributions without breaking things due to
          "RELEASE_TESTING" always being set

2.3631  2019-02-25
        - no functional changes -- all changes are documentation
        - added section on the automated testing section of FAQ that on modern
          perlbrews (>0.86), you must have more than one perl installed for the
          version numbers to be displayed (closes #96)
        - in FAQ's perlbrew setup, add the task of doing a reboot after install
          (closes #93)
        - removed most of SYNOPSIS and replaced with a link to the FAQ
          (closes #92)
        - added RPi::Pin's pwm_range() to the FAQ (closes #91);
        - added section in auto-test section of FAQ for Test::BrewBuild install
          (work on #95)
        - added piece on how to ensure sudo $PATH is set correctly (closes #95)
        - various minor FAQ/POD updates

2.3630  2019-01-04
        - added new identify() method in Core (closes #82)
        - added new binary "pidentify" that gets installed with the distribution
        - update test files to exit if test file specific env vars aren't set
          before checking for PI_BOARD
        - added missing ICs and sensors to the test section in POD, and added
          information on newly added test environment variables
        - change a markdown format to POD format in FAQ (fixes #81)
        - fix wire colour for the latch pin on the shift register in the test
          platform diagrams (fixes #80)
        - in t/15.pwm_spi_adc.t test file, we now set RPI_ADC=1 if we've
          successfully reached the sudo load
        - pinmap binary now uses "/usr/bin/env perl" as the shebang line instead
          of "/usr/bin/perl"